tests/ui/closures/2229_closure_analysis/match/patterns-capture-analysis.stderr
error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:12:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:15:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:12:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:15:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:30:5
   |
LL | /     || {
LL | |
LL | |         match variant {
LL | |             _ => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:49:5
   |
LL | /     || {
LL | |
LL | |         match variant {
LL | |             SingleVariant::Points(_) => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:63:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:66:15
   |
LL |         match variant {
   |               ^^^^^^^
note: Capturing variant[(0, 0)] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:66:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:63:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:66:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:83:5
   |
LL | /     || {
LL | |
LL | |         match array {
LL | |             [_,_,_] => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:105:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:108:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:105:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:108:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:123:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing slice[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:126:15
   |
LL |         match slice {
   |               ^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:123:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture slice[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:126:15
   |
LL |         match slice {
   |               ^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:135:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing slice[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:138:15
   |
LL |         match slice {
   |               ^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:135:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture slice[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:138:15
   |
LL |         match slice {
   |               ^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:147:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing slice[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:150:15
   |
LL |         match slice {
   |               ^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:147:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture slice[] -> ImmBorrow
  --> $DIR/patterns-capture-analysis.rs:150:15
   |
LL |         match slice {
   |               ^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:164:5
   |
LL | /     || {
LL | |
LL | |         match slice {
LL | |             [..] => {},
LL | |             _ => {}
LL | |         }
LL | |     };
   | |_____^

error: aborting due to 16 previous errors

